# blue

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  install.sh
.blue/: blue.db  config.yaml  context.manifest.yaml
.blue/data/blue/: blue.db
.blue/dialogues/: pm-repo-sync-pool.json
.blue/dialogues/2026-02-06T1839Z-rfc-0058-supersession-hybrid-relational-dynamodb-architecture/: expert-pool.json  round-0.summary.md  round-1.summary.md  round-2.summary.md  round-3.summary.md  scoreboard.md  tensions.md  verdict.md
.blue/dialogues/2026-03-11T1341Z-jira-cloud-integration-for-blue/: expert-pool.json  round-0.summary.md  round-1.summary.md  round-2.summary.md  scoreboard.md  tensions.md
.blue/dialogues/2026-03-12T2026Z-pm-repo-sync-architecture/: expert-pool.json  round-0.summary.md  round-1.summary.md  round-2.summary.md  scoreboard.md  tensions.md
.blue/dialogues/ukfs-spec-review/: CONVERGENCE.md  background.md  expert-pool.json
.blue/docs/: TODO.md
.blue/docs/adrs/: 0001-purpose.accepted.md  0002-presence.accepted.md  0003-home.accepted.md  0005-single-source.accepted.md  0006-alignment-dialogue-agents.md  0006-relationships.accepted.md  0007-integrity.accepted.md  0008-honor.accepted.md  0009-courage.accepted.md  0010-no-dead-code.accepted.md  0011-freedom-through-constraint.accepted.md  0013-overflow.accepted.md  0014-alignment-dialogue-agents.md  0015-plausibility.accepted.md  0016-you-know-who-you-are.md  0018-dynamodb-portable-schema.accepted.md
.blue/docs/dialogues/: 2026-01-25-plan-files-and-dialogue-separation.dialogue.md  2026-01-25T0100Z-claude-code-task-integration.dialogue.recorded.md  2026-01-26-postmortem-runbook-sdlc-integration.dialogue.md  2026-01-26-rfc-0021-filesystem-aware-numbering.dialogue.md  2026-01-26T0100Z-authenticated-mcp-instruction-delivery-rfc-design.dialogue.recorded.md  2026-01-26T0200Z-dialogue-format-contract-rfc-design.dialogue.recorded.md  2026-01-26T0300Z-document-lifecycle-filenames-rfc-design.dialogue.recorded.md  2026-01-26T0400Z-file-based-subagent-output-and-dialogue-format-contract-rfc-design.dialogue.recorded.md  2026-01-26T0500Z-iso-8601-document-filename-timestamps-rfc-design.dialogue.recorded.md  2026-01-26T0800Z-rfc-0022-filesystem-authority.dialogue.recorded.md  2026-01-26T0900Z-rfc-0026-unified-document-architecture.dialogue.recorded.md  2026-01-26T2128Z-spike-resolved-lifecycle.dialogue.recorded.md  2026-02-01T2026Z-test-expert-pool-feature.dialogue.recorded.md  2026-02-01T2105Z-sqlite-vs-flat-files.dialogue.recorded.md  2026-02-01T2214Z-guard-command-architecture.dialogue.recorded.md  2026-02-02T1158Z-rfc-0051-global-perspective-tension-tracking.dialogue.recorded.md  2026-02-06T1839Z-rfc-0058-supersession-hybrid-relational-dynamodb-architecture.dialogue.recorded.md  2026-02-11T0544Z-prenuptial-asset-tracing-strategy.dialogue.recorded.md  2026-03-11T1341Z-jira-cloud-integration-for-blue.dialogue.recorded.md  2026-03-12T2026Z-pm-repo-sync-architecture.dialogue.recorded.md  cross-repo-realms-refinement.dialogue.recorded.md  persephone-phalaenopsis.dialogue.recorded.md  realm-mcp-design.dialogue.recorded.md  realm-semantic-index.dialogue.md  rfc-0017-dynamic-context-activation.dialogue.recorded.md  rfc-context-injection-consolidation.dialogue.recorded.md  rfc-document-import-sync.dialogue.md
.blue/docs/patterns/: alignment-dialogue-pattern.md
.blue/docs/rfcs/: 0001-cross-repo-realms.accepted.md  0001-dialogue-sqlite-metadata.impl.md  0002-A-port-coherence-functionality.md  0002-I-runbook-action-lookup.md  (+92 more)
.claude/: settings.json
.claude/agents/: alignment-expert.md
.claude/hooks/: guard-write.sh  session-start.sh
.claude/skills/: wt.md
.github/workflows/: ci.yml  jira-e2e.yml
apps/blue-cli/: Cargo.toml  build.rs
apps/blue-cli/src/: main.rs
crates/blue-core/: Cargo.toml
crates/blue-core/src/: alignment.rs  alignment_db.rs  documents.rs  handler_error.rs  indexer.rs  install.rs  lib.rs  llm.rs  manifest.rs  org.rs  plan.rs  pm.rs  repo.rs  state.rs  store.rs  uri.rs  voice.rs  workflow.rs
crates/blue-core/src/daemon/: client.rs  db.rs  server.rs
crates/blue-core/src/forge/: forgejo.rs  git_url.rs  github.rs  mod.rs
crates/blue-core/src/handlers/: adr.rs  audit.rs  audit_doc.rs  decision.rs  delete.rs  dialogue.rs  dialogue_lint.rs  env.rs  guide.rs  index.rs  lint.rs  mod.rs  org_ops.rs  playwright.rs  postmortem.rs  pr.rs  prd.rs  realm.rs  release.rs  reminder.rs  rfc.rs  runbook.rs  session.rs  spike.rs  staging.rs  status.rs  worktree.rs
crates/blue-core/src/pm/: domain.rs  id.rs  locator.rs  sync.rs
crates/blue-core/src/realm/: domain.rs  mod.rs  repo.rs  service.rs
crates/blue-core/src/tracker/: credentials.rs  import.rs  jira.rs  lint.rs  mod.rs  sync.rs
crates/blue-core/tests/: pm_e2e.rs
crates/blue-mcp/: Cargo.toml
crates/blue-mcp/src/: error.rs  lib.rs  server.rs
crates/blue-mcp/src/handlers/: adr.rs  alignment.rs  audit.rs  audit_doc.rs  decision.rs  delete.rs  dialogue.rs  dialogue_lint.rs  env.rs  guide.rs  index.rs  lint.rs  llm.rs  mod.rs  playwright.rs  postmortem.rs  pr.rs  prd.rs  realm.rs  release.rs  reminder.rs  resources.rs  rfc.rs  runbook.rs  session.rs  spike.rs  staging.rs  status.rs  worktree.rs
crates/blue-ollama/: Cargo.toml  build.rs
crates/blue-ollama/src/: lib.rs
docs/adrs/: 0000-never-give-up.md  0004-evidence.md  0012-faith.md
docs/cli/: README.md
docs/dialogues/: cross-repo-realms.dialogue.md
docs/pm/: README.md
docs/rfcs/: 0001-cross-repo-realms.md  0001-efficient-document-format.md  0002-port-coherence-functionality.md  0002-realm-mcp-integration.md
docs/spikes/: cross-repo-coordination.md
docs/workflow/: README.md
hooks/: context-restore  pre-compact  session-start
knowledge/: alignment-measure.md  blue-adrs.md  expert-pools.md  task-sync.md  workflow-creation.md
scripts/: install.sh  org-context-hook-test.sh  org-context-hook.sh
skills/alignment-expert/: SKILL.md
skills/alignment-play/: SKILL.md
skills/blue-org-context/: SKILL.md
skills/domain-setup/: SKILL.md
skills/wt/: SKILL.md
(+210 files in other folders)
