[workspace]
resolver = "2"
members = [
    "crates/blue-core",
    "apps/blue-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://git.beyondtheuniverse.superviber.com/superviber/blue"
authors = ["Eric Minton Garcia"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full", "io-std"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Git
git2 = "0.19"

# Regex
regex = "1.10"

# Semver
semver = { version = "1.0", features = ["serde"] }

# HTTP server (daemon)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client (Forgejo API, Jira)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Directories
dirs = "5.0"

# Testing HTTP services
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# Crypto
sha2 = "0.10"

# Keychain
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# Random
rand = "0.8"

# UUID
uuid = { version = "1", features = ["v4"] }

# Testing
tempfile = "3.15"

# Internal
blue-core = { path = "crates/blue-core" }

