[package]
name = "blue"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Blue CLI - Welcome home"
build = "build.rs"

[[bin]]
name = "blue"
path = "src/main.rs"

[dependencies]
blue-core.workspace = true
blue-mcp.workspace = true
blue-ollama.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
dirs.workspace = true
tempfile.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
which = "7.0"
