[package]
name = "blue"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Blue CLI - Welcome home"
build = "build.rs"

[[bin]]
name = "blue"
path = "src/main.rs"

[dependencies]
blue-core.workspace = true

clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace = true
dirs.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
which = "7.0"
