[package]
name = "blue-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data structures and logic for Blue"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
