[package]
name = "blue-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data structures and logic for Blue"

[features]
test-helpers = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
chrono.workspace = true
git2.workspace = true
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true
dirs.workspace = true
semver.workspace = true
regex.workspace = true
sha2.workspace = true

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
tempfile.workspace = true
