[package]
name = "blue-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server - Blue's voice"

[dependencies]
blue-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
