[package]
name = "blue-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server - Blue's voice"

[dependencies]
blue-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
git2.workspace = true
regex.workspace = true
sha2.workspace = true

[dev-dependencies]
blue-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
