[package]
name = "blue-ollama"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded Ollama server management for Blue"

[dependencies]
blue-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
sha2.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
